--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ apply plugin: 'com.neenbedankt.android-apt'
 android {
     def gitCommitCount = "git rev-list HEAD --count".execute().text.trim()
     aaptOptions {
-       cruncherEnabled = false
+        cruncherEnabled = false
     }
     signingConfigs {
         release {
-          storeFile file("C:/Users/Victor Guerra/Documents/PROJETOS/CHECK MY BILL/APP/CheckMyBillKey.jks")
-          storePassword "nemlembro"
-          keyAlias "checkmybillkey"
-          keyPassword "nemlembro"
+            storeFile file("key/CheckMyBillKey.jks")
+            storePassword "nemlembro"
+            keyAlias "checkmybillkey"
+            keyPassword "nemlembro"
         }
     }
     compileSdkVersion 23
@@ -20,8 +20,8 @@ android {
         applicationId "com.checkmybill.app"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 45
-        versionName "5.0"
+        versionCode 50
+        versionName "8.0"
     }
     sourceSets {
         main {
@@ -64,31 +64,33 @@ dependencies {
     compile('com.mikepenz:materialdrawer:4.3.4@aar') {
         transitive = true
     }
+    compile('org.apache.httpcomponents:httpmime:4.3.6') {
+        exclude module: 'httpclient'
+    }
+
+    compile 'io.nlopez.smartlocation:library:3.3.3'
     compile 'com.github.amlcurran.showcaseview:library:5.4.3'
     compile 'com.ernestoyaquello.stepperform:vertical-stepper-form:0.9.9'
     compile 'com.shaishavgandhi:login-buttons:0.1.1'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.layer-net:step-indicator:1.0.0'
-    compile 'com.j256.ormlite:ormlite-core:4.48'
-    compile 'com.j256.ormlite:ormlite-android:4.48'
-    compile 'com.google.android.gms:play-services-maps:9.4.0'
-    compile 'com.google.android.gms:play-services-location:9.4.0'
-    compile 'com.google.android.gms:play-services-places:9.4.0'
+    compile 'com.layer-net:step-indicator:1.1.0'
+    compile 'com.j256.ormlite:ormlite-core:5.0'
+    compile 'com.j256.ormlite:ormlite-android:5.0'
+    compile 'com.google.android.gms:play-services-maps:11.4.2'
+    compile 'com.google.android.gms:play-services-location:11.4.2'
+    compile 'com.google.android.gms:play-services-places:11.4.2'
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
     compile 'com.mikepenz:fontawesome-typeface:4.4.0.1@aar'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.sothree.slidinguppanel:library:3.2.1'
-    compile 'com.google.maps.android:android-maps-utils:0.4'
+    compile 'com.google.maps.android:android-maps-utils:0.4.4'
     compile 'com.android.support:support-v4:23.4.0'
-    compile('org.apache.httpcomponents:httpmime:4.3.6') {
-        exclude module: 'httpclient'
-    }
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    testCompile 'junit:junit:4.12'
     compile 'com.github.zurche:plain-pie:v0.1.1'
+    testCompile 'junit:junit:4.12'
 }
 apt {
     arguments {
